# template_project_standard

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
